# snarky-parrot

./: Cargo.toml  README.md
benches/: benchmark.rs
examples/: cli.rs
src/: error.rs  lib.rs  main.rs  test.rs  tests.rs
src/rule_trainer/: mod.rs  test.rs
src/text_generator/: mod.rs  test.rs
tests/: test.rs
