[package]
name = "snarky-parrot"
description = "A simple markov chain text generator"
version = "0.2.0"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
license-file = "LICENSE"
repository = "https://github.com/barafael/snarky-parrot"
edition = "2018"

[dev-dependencies]
criterion = "0.3.5"

[dependencies]
rand = "0.8.4"
thiserror = "1"

[[bench]]
path = "benches/benchmark.rs"
name = "benches"
harness = false

[profile.release]
debug = true